--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ h1 {
 .hr-article {
     width: 150px;
     height: 1px;
-    background-color: red;
+    background-color: blue;
     margin-left: 0;
 }
 
